--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,4 +184,8 @@
     <string name="title_activity_results">Results</string>
     <string name="title_activity_post_question">PostQuestion</string>
     <string name="title_activity_questions_board">QuestionsBoard</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_create_quiz">CreateQuiz</string>
 </resources>
