--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,4 +189,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_create_quiz">CreateQuiz</string>
     <string name="title_activity_add_class">AddClass</string>
+    <string name="title_activity_view_question">ViewQuestion</string>
 </resources>
